ISSTA-2023-AE/data/Evaluation/EVALUATION-VIA-CONTROLLED-EXPERIMENTS/Bug-finding-trails/clang-fuzzer/llvm/set-7/fuzzer-file-13ca7e546e35aea4cb6942bdb03736069055edee.log
13ca7e546e35aea4cb6942bdb03736069055edee.c:4:9: error: expression is not assignable
  END = --1,
        ^ ~
13ca7e546e35aea4cb6942bdb03736069055edee.c:5:10: error: expected expression
  EMPTY =#(0 << 8 ) ,
         ^
PLEASE submit a bug report to https://bugs.llvm.org/ and include the crash backtrace, preprocessed source, and associated run script.
Stack dump:
0.	Program arguments: /usr/lib/llvm-12/bin/clang -cc1 -triple x86_64-pc-linux-gnu -emit-obj -mrelax-all --mrelax-relocations -disable-free -disable-llvm-verifier -discard-value-names -main-file-name 13ca7e546e35aea4cb6942bdb03736069055edee.c -mrelocation-model static -mframe-pointer=all -fmath-errno -fno-rounding-math -mconstructor-aliases -munwind-tables -target-cpu x86-64 -tune-cpu generic -fno-split-dwarf-inlining -debugger-tuning=gdb -resource-dir /usr/lib/llvm-12/lib/clang/12.0.1 -I /home/user42/data/csmith/runtime/ -I /home/user42/data/csmith/build/runtime/ -internal-isystem /usr/local/include -internal-isystem /usr/lib/llvm-12/lib/clang/12.0.1/include -internal-externc-isystem /usr/include/x86_64-linux-gnu -internal-externc-isystem /include -internal-externc-isystem /usr/include -O0 -pedantic -w -fdebug-compilation-dir /home/user42/cf_7_crash_12082022/llvm -ferror-limit 19 -fgnuc-version=4.2.1 -faddrsig -o /tmp/13ca7e546e35aea4cb6942bdb03736069055edee-d0fccb.o -x c 13ca7e546e35aea4cb6942bdb03736069055edee.c
1.	13ca7e546e35aea4cb6942bdb03736069055edee.c:5:21: current parser token ','
#0 0x00007fd2ab625001 llvm::sys::PrintStackTrace(llvm::raw_ostream&, int) (/usr/lib/x86_64-linux-gnu/libLLVM-12.so.1+0xd1a001)
#1 0x00007fd2ab623140 llvm::sys::RunSignalHandlers() (/usr/lib/x86_64-linux-gnu/libLLVM-12.so.1+0xd18140)
#2 0x00007fd2ab625712 (/usr/lib/x86_64-linux-gnu/libLLVM-12.so.1+0xd1a712)
#3 0x00007fd2b323b980 __restore_rt (/lib/x86_64-linux-gnu/libpthread.so.0+0x12980)
#4 0x00007fd2b0ea5d07 clang::ASTContext::getAsArrayType(clang::QualType) const (/usr/lib/x86_64-linux-gnu/libclang-cpp.so.12+0xa1dd07)
#5 0x0000000001eb43b0 
clang: error: unable to execute command: Segmentation fault (core dumped)
clang: error: clang frontend command failed due to signal (use -v to see invocation)
Ubuntu clang version 12.0.1-++20211102090516+fed41342a82f-1~exp1~20211102211019.11
Target: x86_64-pc-linux-gnu
Thread model: posix
InstalledDir: /usr/bin
clang: note: diagnostic msg: 
********************

PLEASE ATTACH THE FOLLOWING FILES TO THE BUG REPORT:
Preprocessed source(s) and associated run script(s) are located at:
clang: note: diagnostic msg: /tmp/13ca7e546e35aea4cb6942bdb03736069055edee-ad95e4.c
clang: note: diagnostic msg: /tmp/13ca7e546e35aea4cb6942bdb03736069055edee-ad95e4.sh
clang: note: diagnostic msg: 

********************
